Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/Account_Detail__c.object-meta.xml
<CustomObject>
    <label>Account Detail</label>
    <nameField>
        <displayFormat>Acc-{0000}</displayFormat>
        <label>Account Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>