Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/fields/Already_Paid_Amount__c.field-meta.xml
<CustomField>
    <fullName>Already_Paid_Amount__c</fullName>
    <label>Already Paid Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>