Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/fields/Bank_address__c.field-meta.xml
<CustomField>
    <fullName>Bank_address__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Bank address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>