Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/fields/Client_Project__c.field-meta.xml
<CustomField>
    <fullName>Client_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Project</label>
    <referenceTo>Client_Project__c</referenceTo>
    <relationshipLabel>Account Details</relationshipLabel>
    <relationshipName>Account_Details</relationshipName>
    <type>Lookup</type>
</CustomField>