Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/fields/IFSC_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>IFSC Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>