Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/fields/Pan_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>Pan_Card_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Pan Card Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>