Githubsalesforcebackup/force-app/main/default/objects/Account_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Account_Holder_Name__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Bank_address__c</columns>
    <columns>Bank_Name__c</columns>
    <columns>IFSC_Code__c</columns>
    <columns>Pan_Card_Number__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>